--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <script src="index.js">
             nnerText
         </script>
+        <p> This is for the <a href="https://hng.tech">HNG internship</a> Exercise.</p>
     </body>
 </html>
